 * fixed another occurrance of URL malformed, cmp_pkg_versions called with wrong
   pkg struct for dep in --upgrade
 * moved src/action.c:pkg_action_update to src/package.c:update_pkg_cache (libslapt)
 * download_data now gets passed callback function, as arg from download_pkg
   and get_mirror_data_from_source (libslapt)

0.9.7d Nov 18, 2003
 * documentation updates
 * added Brazilian Portuguese translation by Arnaldo de Moraes Pereira <arnaldo at sp-dhn dot com dot br>
 * fixed bug when installing package, comparing wrong package structure for version check (thanks Jim)
 * added another unofficial package source
 * Makefile updates (libslapt fix)
 * initialized list->excludes in parse_excludes (libslapt fix)
 * added get_pkg_by_details function
 * added remove_from_transaction function

0.9.7c Nov 13, 2003
 * updated Polish translation
 * added PKG_VER regex definition
 * updated cmp_pkg_versions to ignore arch and compare build if version parts are equal
 * Makefile updates
 * more Makefile updates, symlinking libslapt-$(VERSION).so to libslapt.so

0.9.7b Nov 10, 2003
 * removed --interactive option
 * download all pkgs before processing installs,upgrades, and removals in transaction
 * updated NLS template and en.po
 * updated MD5SUM regex
 * give transaction report prompt for every dist-upgrade (even if no removes or upgrades,
   must have installs, however)
 * updated regex for pkg names, versions, md5, etc
 * when looking up md5 checksum, use the pkg location as well as name and version 
   (in case of duplicate versions)
 * updated regex, yet again, for pkg names, versions, md5, etc
 * updated makefile to gen library files
 * added Polish translation by nixon & s1m0n
 * moved gettext mo files into standard slackware locale directory (/usr/share/locale)

0.9.7a Nov 05, 2003
 * added check for presence of pkg in trans before adding upgrade (during --install)
 * added check for presence of pkg in trans before adding remove (during --remove)