@@ -8,6 +8,7 @@
  * moved src/action.c:pkg_action_update to src/package.c:update_pkg_cache (libslapt)
  * download_data now gets passed callback function, as arg from download_pkg
    and get_mirror_data_from_source (libslapt)
+ * makefile updates for libslapt
 
 0.9.7d Nov 18, 2003
  * documentation updates
